# seismic

./: .gitignore  README.md
Correlation_in_AF/: CMakeLists.txt  cne.sh  correlationAF_lib.py  correlation_AF.cpp  test_AF.py
Correlation_in_C/: Makefile  check_valores_entre0y1.py  comprobacion_correlate.py  correlation_c.cpp  correlation_lib.py  test_c.py
Correlation_in_CUDA/: Makefile  correlation_cuda.cu  correlation_lib.py  test_cuda.py
Correlation_in_Cython/: FullXCM2_cython.pyx  compile.sh  correlate_cython_wrapper.pyx  par_correlate_cython_wrapper.pyx  par_setup.py  par_test.py  setup.py  setup2.py  setup3.py  setup4.py  test.py
Correlation_in_MultiCUDA/: Makefile  correlation_lib.py  correlation_multicuda.cu  correlation_multicuda.h  test_cuda.py
Correlation_in_OMP/: Makefile  correlation_c.cpp  correlation_lib.py  test_c.py
Correlation_in_pthreads/: compile.sh  correlation_lib.py  correlation_pthreads.cpp  test_pthreads.py
original/: FullXCM2_forJC.py
